# stormbreaker

./: CMakeLists.txt  main.cpp  stormbreaker.cbp  tmp_fname.txt
include/: caffe_mk.h  clusters.h  dataset.h  deep_nodes.h  detector_facial.h  dlib_cnn_face_detector.h  dlib_mk.h  input_nodes.h  mj.h  node.h  nodo.h  nodo_cara.h  observador.h  processing_nodes.h  rel.h  resnet.h  tensor_mk.hpp
include/utils/: sistema_archivos.h
mjolnir/include/: Screenshot.h  deep_nodes.h  input_nodes.h  mj.h  nodo.h  nodos_tibianos.h  processing_nodes.h
mjolnir/src/: Screenshot.cpp  deep_nodes.cpp  input_nodes.cpp  mj.cpp  nodo.cpp  nodos_tibianos.cpp  processing_nodes.cpp
scripts/: file_dialog.py
src/: caffe_mk.cpp  clusters.cpp  dataset.cpp  deep_nodes.cpp  detector_facial.cpp  dlib_cnn_face_detector.cpp  dlib_mk.cpp  input_nodes.cpp  mj.cpp  node.cpp  nodo.cpp  nodo_cara.cpp  observador.cpp  processing_nodes.cpp  rel.cpp  resnet.cpp  sistema_archivos.cpp  tensor_mk.cpp
utils/: organizar.cpp  sistema_archivos.cpp
